--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@hapi/lab": "^24.5.1",
     "@types/hapi__hapi": "^20.0.10",
     "@types/node": "^17.0.21",
+    "@types/uuid": "^8.3.4",
     "sequelize-cli": "^6.4.1",
     "sequelize-tinker": "^0.4.1",
     "ts-node": "^10.7.0",
