--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,6 +99,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "test"
+    "node_modules",
+    "**/*.test.ts"
   ]
 }
