--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ development, main ]
 
+env:
+  TOKEN_KEY: test_token_key
+  TOKEN_EXPIRY_DAYS: 365
+
 jobs:
   build:
 
