--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,21 +9,25 @@ on:
   pull_request:
     branches: [ development, main ]
 
-env:
-  TOKEN_KEY: test_token_key
-  TOKEN_EXPIRY_DAYS: 365
+# env:
+#   ENV_FILE: .env.test
 
 jobs:
+  # env:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat ${{ env.ENV_FILE }} >> $GITHUB_ENV # load env variables from file
+
   build:
-
     runs-on: ubuntu-latest
-
+    # needs: [env]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - run: npm ci # clean install of node dependencies
+      - run: npm run build --if-present # build code
+      - run: npm test # run tests
