--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,5 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code, and run the tests.
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the
+# source code, and run the tests.
 # Adapted from https://github.com/actions/starter-workflows/blob/main/ci/node.js.yml
 
 name: Node.js CI
@@ -9,25 +10,15 @@ on:
   pull_request:
     branches: [ development, main ]
 
-# env:
-#   ENV_FILE: .env.test
-
 jobs:
-  # env:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: cat ${{ env.ENV_FILE }} >> $GITHUB_ENV # load env variables from file
-
   build:
     runs-on: ubuntu-latest
-    # needs: [env]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           cache: 'npm'
-      - run: npm ci # clean install of node dependencies
-      - run: npm run build --if-present # build code
-      - run: npm test # run tests
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
