--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@faker-js/faker": "^6.0.0-beta.0",
     "@types/chai": "^4.3.4",
     "@types/hapi__hapi": "^20.0.10",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^17.0.21",
     "@types/proxyquire": "^1.3.28",
