--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.4",
     "@types/hapi__hapi": "^20.0.10",
     "@types/jsonwebtoken": "^9.0.1",
