--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -39,3 +39,4 @@ jobs:
         uses: joelwmale/webhook-action@ee20d8c79e728c2d339b114fd27772ee0226aa41
         with:
           url: https://staging.hook-runner.landexplorer.coop/run.php?target=land-explorer-back-end
+          body: '{"ref": "$GITHUB_REF"}'
