--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "🚀 call webhook on staging server"
-        uses: joelwmale/webhook-action@ee20d8c79e728c2d339b114fd27772ee0226aa41
-        with:
-          url: https://staging.hook-runner.landexplorer.coop/run.php?target=land-explorer-back-end
-          body: '{"ref": "$GITHUB_REF"}'
+        uses: distributhor/workflow-webhook@v3
+        env:
+          webhook_url: https://staging.hook-runner.landexplorer.coop/run.php?target=land-explorer-back-end
+          data: '{"ref": "$GITHUB_REF"}'
