--- a/.env.test
+++ b/.env.test
@@ -1,17 +1,17 @@
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
-DATABASE_PORT=3306
+DATABASE_PORT=
 
-POLYGON_DATABASE_HOST=127.0.0.1
+POLYGON_DATABASE_HOST=
 POLYGON_DATABASE_USER=
 POLYGON_DATABASE_NAME=
 POLYGON_DATABASE_PASSWORD=
-POLYGON_DATABASE_PORT=3306
+POLYGON_DATABASE_PORT=
 
-PORT=4000
-TOKEN_KEY=CHANGE_THIS_TO_SOMETHING_LONG_AND_RANDOM
+PORT=
+TOKEN_KEY=test_token_key
 TOKEN_EXPIRY_DAYS=365
 
 SENDGRID_API_KEY=
