--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:tsc": "tsc --watch -p .",
     "dev:serve": "nodemon -e js -w lib src/main.ts",
     "dev": "run-p dev:*",
-    "test": "lab -v **/*.test.js",
+    "test": "env-cmd -f .env.test ts-mocha",
     "build": "tsc",
     "serve": "pm2 start lib/main.js"
   },
@@ -26,20 +26,29 @@
     "hapi-auth-bearer-token": "^8.0.0",
     "hapi-sequelizejs": "^4.5.0",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
-    "@hapi/code": "^8.0.7",
-    "@hapi/lab": "^24.5.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
     "@types/hapi__hapi": "^20.0.10",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^17.0.21",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "^8.3.4",
+    "chai": "^4.3.7",
+    "env-cmd": "^10.1.0",
+    "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3",
     "sequelize-cli": "^6.4.1",
-    "sequelize-tinker": "^0.4.1",
+    "sinon": "^15.0.1",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
