--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,8 @@ DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_PORT=3306
 
-POLYGON_DATABASE_HOST=127.0.0.1
-POLYGON_DATABASE_USER=
-POLYGON_DATABASE_NAME=
-POLYGON_DATABASE_PASSWORD=
-POLYGON_DATABASE_PORT=3306
+BOUNDARY_SERVICE_URL=
+BOUNDARY_SERVICE_SECRET=
 
 PORT=4000
 TOKEN_KEY=CHANGE_THIS_TO_SOMETHING_LONG_AND_RANDOM
