--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev:tsc": "tsc --watch -p .",
-    "dev:serve": "nodemon -e js -w lib src/main.ts",
+    "dev:serve": "cross-env NODE_ENV=development nodemon -e js -w lib src/main.ts",
     "dev": "run-p dev:*",
     "test": "env-cmd -f .env.test ts-mocha",
     "build": "tsc",
@@ -20,6 +20,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^11.0.0",
     "fs": "*",
     "geojson2shp": "^0.5.0",
