--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
+    "socket.io": "^4.7.4",
+    "socketio-jwt": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
