--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev:tsc": "tsc --watch -p .",
-    "dev:serve": "nodemon -e js -w lib src/main.ts",
+    "dev:serve": "cross-env NODE_ENV=development nodemon -e js -w lib src/main.ts",
     "dev": "run-p dev:*",
     "test": "env-cmd -f .env.test ts-mocha",
     "build": "tsc",
@@ -20,6 +20,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^11.0.0",
     "fs": "*",
     "geojson2shp": "^0.5.0",
@@ -29,6 +30,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
+    "socket.io": "^4.7.4",
+    "socketio-jwt": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -45,12 +48,13 @@
     "chai": "^4.3.7",
     "env-cmd": "^10.1.0",
     "mocha": "^10.2.0",
+    "nodemon": "^3.1.0",
     "proxyquire": "^2.1.3",
     "sequelize-cli": "^6.4.1",
     "sinon": "^15.0.1",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^5.4.3"
   }
 }
