--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
-    "files.insertFinalNewline": true,
-    "mochaExplorer.envPath": ".env.test",
-    "mochaExplorer.require": "ts-node/register",
-    "mochaExplorer.configFile": ".mocharc.json",
-    "mocha-snippets.quote-type": "double",
-    "mocha-snippets.glob": "**/*.test.ts",
+  "files.insertFinalNewline": true,
+  "mochaExplorer.envPath": ".env.test",
+  "mochaExplorer.require": "ts-node/register",
+  "mochaExplorer.configFile": ".mocharc.json",
+  "mocha-snippets.quote-type": "double",
+  "mocha-snippets.glob": "**/*.test.ts",
+  "editor.formatOnSave": true,
+  "editor.formatOnSaveMode": "modifications",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
