Add basic Glitchtip analytics
(cherry picked from commit ba873496337732c3ddbc9531ca48e55b16d12ecc)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   "mocha-snippets.quote-type": "double",
   "mocha-snippets.glob": "**/*.test.ts",
   "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "modifications",
+  "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
