--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.5",
     "@sendgrid/mail": "^7.7.0",
+    "@sentry/node": "^9.11.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
