--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hapi/inert": "^6.0.5",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/node": "^9.11.0",
+    "@umami/node": "^0.4.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
