Swap out Umami for Mixpanel server-side analytics

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ SENDGRID_API_KEY=
 BUTTONDOWN_API_KEY=
 
 GLITCHTIP_KEY=
+
+# For Mixpanel analytics, this token needs to be set
+MIXPANEL_TOKEN=<get this from the Mixpanel dashboard>
