--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@hapi/inert": "^6.0.5",
     "@sendgrid/mail": "^8.1.4",
     "@sentry/node": "^9.11.0",
-    "@umami/node": "^0.4.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
@@ -30,6 +29,7 @@
     "hapi-sequelizejs": "^4.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.0",
+    "mixpanel": "^0.18.1",
     "mysql2": "^3.14.0",
     "sequelize": "^6.17.0",
     "socket.io": "^4.7.4",
